Dev (#360)
* Shulker Box GUI features to Custom kits  (#358)

* deleted unused files

* deleted unused files

* fixed a bug where armor trim only applied to armors which already had itemmeta

* Add new match types for sumo game mode (#346)

* Add new match types for sumo game mode

* Refactor bridges.yml to update match types and items

* reset build after round (#348)

* Update match types and reset build after round

* Remove PARTY_FFA from match types

* Add files via upload

* Update playerkit.yml version and add Shulker Boxes

Updated version from 2 to 3 and added Shulker Boxes category.

* Add new player custom types to GUIType

* Clean up comments in playerkit.yml

Removed commented instructions for dynamic categories in playerkit.yml.

* Enhance shulker box interaction in MainGUI

* Implement shulker editor navigation in PotionsGUI

Added functionality to route back to the ShulkerBoxEditorGUI when editing a shulker box.

* Add remove button for shulker box in GUI

---------

Co-authored-by: Nandor Dukat <dukatnandor@gmail.com>
Co-authored-by: MISHA <208148594+lokspel@users.noreply.github.com>

* implemented shulker category hiding when opening category GUI from shulker box

* added reusable build workflow, auto publishing and changelog generation to modrinth and github actions

* fixed permission issue with workflow files

* add rename jar file

* updated reusable build workflow

* updated dev_build.yml workflow to only create dev release on dev branch

* updated git-cliff actions for generating auto changelog for official releases as well as dev builds

* updated README.md

* JAVA 25 (#363)

* changed java version to 25 on workflow build

* updated README.md to java 25

* fixed creeper explosion

* fixed creeper explosion #2

* fixed ladder gui to update disabled ladders real time

* fixed arrow dissapear and cant pickup issue

* fixed item stack amount display in queue guis

* started implementing logger for new website

* added faststats metrics

* update